--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "description": "A simple web app to display Namaz timings.",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "Namaz.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "Namaz512-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
